fix: wishlist item description not showing line breaks

--- a/client/src/pages/Wishlist/Wishlist.css
+++ b/client/src/pages/Wishlist/Wishlist.css
@@ -219,6 +219,10 @@ main {
                 @apply inline-block p-[4px] m-[2px] bg-light text-dark rounded leading-[1] break-words max-w-[20rem] font-medium;
               }
             }
+
+            .description {
+              @apply whitespace-break-spaces;
+            }
           }
 
           .body-btn-container {
